Better DI